fea-rs/test-data/compile-tests/mini-latin/bad/bad_size2.fea
# parameters statement is missing
feature size {
   sizemenuname 1 0 5 "Mac MinionPro Size Name";
} size;
